# alg_labs

./: Cargo.toml  README.md
benches/: bench.rs
l1/: Otchet.odt  plot.ods
l1/benches/: bench.rs
l1/src/: lib.rs
l2/: Cargo.toml  Otchet.odt  plot.ods
l2/benches/: bench.rs
l2/src/: lib.rs
l3/: Cargo.toml  Otchet.odt  plot.ods
l3/benches/: bench.rs
l3/src/: lib.rs  main.rs
l4/: Cargo.toml  Otchet.odt  plot.ods
l4/benches/: bench.rs
l4/src/: lib.rs
l5/: Cargo.toml  Otchet.odt  plot.ods
l5/benches/: bench.rs
l5/src/: lib.rs  main.rs
l6/: Cargo.toml  Otchet.odt  plot.ods
l6/benches/: bench.rs
l6/src/: lib.rs
l6/tests/: visualize.rs
src/: lib.rs
