[package]
name = "l6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
image = "0.24.5"

[[bench]]
name = "bench"
harness = false
